# ProGFASTAGen

./: .gitignore  LICENSE  README.md  binary_search_on_protein_graphs.py  compile_and_setup_depencies.sh  convert_percxml_to_tsv.py  convert_to_mgf.nf  convert_to_mzml.nf  create_global_fasta.nf  create_ms2_specific_fasta.nf  create_precursor_specific_fasta.nf  execute.sh  generate_queries_from_mgf.py  identification_via_comet.nf  main_workflow_global_fasta.nf  main_workflow_ms2_specific_fasta.nf  main_workflow_precursor_specific_fasta.nf  main_workflow_protein_fasta.nf  nextflow.config  summarize_ident_results.nf
ProtGraphTraverseFloatSourceDryRun/: CMakeLists.txt
ProtGraphTraverseFloatSourceDryRun/protgraphcpp/protgraphcpp/: protein_graph.cpp
ProtGraphTraverseFloatSourceVarLimitter/protgraphcpp/protgraphcpp/: protein_graph.cpp  protein_graph.hpp
ProtGraphTraverseIntSourceDryRun/: CMakeLists.txt
ProtGraphTraverseIntSourceDryRun/protgraphcpp/protgraphcpp/: protein_graph.cpp  protein_graph.hpp
ProtGraphTraverseIntSourceVarLimitter/protgraphcpp/protgraphcpp/: main.cpp  protein_graph.hpp
docker/: Dockerfile  README.md
example_configurations/: PXD002171_no_dig.txt  PXD002171_trypsin_dig.txt  PXD028605_no_dig.txt  PXD028605_trypsin_dig.txt  PXDXXXXXX_no_dig.txt  PXDXXXXXX_trypsin_dig.txt  comet_config_high_res_no_dig.txt  comet_config_high_res_trypsin_dig.txt  comet_config_low_res_no_dig.txt  comet_config_low_res_trypsin_dig.txt
